cards + fonts + colors + buttons

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,15 @@
 // Define variables for your color scheme
-
+$card-bg: #F8F1F1;
+$button: #94ECBE;
+$font-color: #766B77;
+$pink: #D5CAD6;
+$pink-card: #C8AFCA;
 // For example:
 $red: #FD1015;
 $blue: #167FFB;
 $yellow: #FFC65A;
 $orange: #E67E22;
-$green: #1EDD88;
+$green: #94ECBE;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+$white: white;
