--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,14 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container">
+<h1>Components</h1>
+<h2>sous-titre</h2>
+<p>paragrpahe</p>
+<div class="container">
+<div class="card">
+  <h2>test de la card</h2>
+</div>
+<div>
+  <a class="button" href="#">button</a>
+  <i class="fas fa-plus button-circle"></i>
+</div>
+</div>
+</div>
