--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,12 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@900&family=Roboto:wght@300;400;700&display=swap');
 
 // Define fonts for body and headers
-$body-font: "Work Sans", "Helvetica", "sans-serif";
-$headers-font: "Nunito", "Helvetica", "sans-serif";
+$body-font: 'Roboto', "sans-serif";
+$headers-font: 'Roboto', "sans-serif";
+$title-font: 'Poppins', "sans-serif";
+$subtitle : 'Roboto', "sans-serif";
+
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
