--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -4,6 +4,7 @@ $button: #94ECBE;
 $font-color: #766B77;
 $pink: #D5CAD6;
 $pink-card: #C8AFCA;
+$form-bg: #F2F2F2;
 // For example:
 $red: #FD1015;
 $blue: #167FFB;
