--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,9 @@
 <div class="container">
-<h1>Components</h1>
-<h2>sous-titre</h2>
-<p>paragrpahe</p>
-<div class="container">
-<div class="card">
-  <h2>test de la card</h2>
-</div>
-<div>
-  <a class="button" href="#">button</a>
-  <i class="fas fa-plus button-circle"></i>
-</div>
-</div>
+  <form action="/action_page.php">
+    <label for="fname">First name:</label><br>
+    <input type="text" id="fname" name="fname" value="John"><br>
+    <label for="lname">Last name:</label><br>
+    <input type="text" id="lname" name="lname" value="Doe"><br><br>
+    <input type="submit" value="Submit">
+  </form>
 </div>
