beautify css + erb

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,9 +1,9 @@
-.button{
+.button {
   color: white;
   font-weight: 900;
   background-color: $green;
   padding: 10px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
   font-size: 18px;
   width: 170px;
   display: block;
