--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,9 +1,10 @@
-.card{
+.card {
   border: none;
   background-color: $card-bg;
   padding: 10px;
   border-radius: 4px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+
   h2 {
     font-weight: 700;
     color: $pink-card;
