--- a/app/views/babies/index.html.erb
+++ b/app/views/babies/index.html.erb
@@ -3,9 +3,9 @@
     <h1>Sélectionner</h1>
     <p>Un enfant</p>
     <% @babies.each do |baby| %>
-      <%# <div>
-        <%= cl_image_tag ship.photo.key, height: 200, width: 350, crop: :fill %>
-      <%# </div> %> 
+      <div>
+        <%= cl_image_tag baby.photo.key, height: 200, width: 350, crop: :fill, class: "avatar" %>
+      </div>
       <div>
         <h1><%= baby.name %></h1>
       </div>
