--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,13 +1,11 @@
-<h2>Forgot your password?</h2>
+<div class="container">
+  <h2>Forgot your password?</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+  <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" } %>
+    <%= f.input :email, required: true, autofocus: true, input_html: { autocomplete: "email" } %>
   </div>
 
   <div class="form-actions">
@@ -16,3 +14,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
