--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,14 +1,12 @@
-<h2>Resend unlock instructions</h2>
+<div class="container">
+  <h2>Resend unlock instructions</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
+  <%= simple_form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
   <%= f.error_notification %>
   <%= f.full_error :unlock_token %>
 
   <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" } %>
+    <%= f.input :email, required: true, autofocus: true, input_html: { autocomplete: "email" } %>
   </div>
 
   <div class="form-actions">
@@ -17,3 +15,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
