added object-fit to avatars

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -2,10 +2,13 @@
   width: 40px;
   border-radius: 50%;
   height: 40px;
+  object-fit: cover;
 }
 .avatar-large {
   width: 56px;
+  height: 56px;
   border-radius: 50%;
+  object-fit: cover;
 }
 .avatar-bordered {
   width: 40px;
