--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,13 @@
   </head>
 
   <body>
-    <%= render 'shared/navbar' %>
+    <% unless controller.controller_name == "devise_controller" || "pages_controller" %>
+      <%= render 'shared/navbar' %>
+    <% end %>
     <%= render 'shared/flashes' %>
     <%= yield %>
+    <% unless controller.controller_name == "devise_controller" || "pages_controller" %>
     <%= render 'shared/menubar' %>
+    <% end %>
   </body>
 </html>
