--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
-<div class="bg-video">
-  <div class="container">
+<div class="bg-img">
+  <div class="container d-flex align-items-center flex-column">
+    <%= image_tag "logo.png", class: "logo" %>
     <p class="button">Signup</p>
     <p>Login</p>
   </div>
