--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,12 @@
 // Specific CSS for your home-page
-.bg-video{
+.bg-img{
   height: 100vh;
   width: 100vw;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: image-url('background.jpg');
+}
+.logo{
+  height: 50px;
 }
