adapted card for new baby

--- a/app/assets/stylesheets/pages/_index_babies.scss
+++ b/app/assets/stylesheets/pages/_index_babies.scss
@@ -3,5 +3,18 @@
   flex-direction: row;
   align-items: center;
   margin: 10px;
-  height: 110px;
+  height: 90px;
 }
+
+#baby_name {
+  margin-left: 15px;
+  margin-bottom: 0px; 
+
+}
+
+.fas {
+  width: 30px;
+  font-size: 30px;
+  color: $pink-card;
+  margin: 10px;
+} 
