--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -9,3 +9,14 @@
   display: block;
   text-align: center;
 }
+.button-secondary {
+  color: $green;
+  font-weight: 900;
+  background-color: rgba(148, 236, 190, 0.3);
+  padding: 10px;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+  font-size: 18px;
+  width: 170px;
+  display: block;
+  text-align: center;
+}
