--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,10 +2,11 @@
 .bg-img{
   height: 100vh;
   width: 100vw;
+  background: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5)), url("background.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: image-url('background.jpg');
+
 }
 .logo{
   height: 50px;
