--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="bg-img">
-  <div class="container d-flex align-items-center flex-column">
+  <div class="container d-flex align-items-center flex-column justify-content-center pt-5">
     <%= image_tag "logo.png", class: "logo" %>
-    <p class="button">Signup</p>
-    <p>Login</p>
+    <p class="button mt-5">Login</p>
+    <p class="button-secondary mt-1">Signup</p>
   </div>
 </div>
