added margin to upper text

--- a/app/assets/stylesheets/pages/_index_babies.scss
+++ b/app/assets/stylesheets/pages/_index_babies.scss
@@ -9,7 +9,6 @@
 #baby_name {
   margin-left: 15px;
   margin-bottom: 0px; 
-
 }
 
 .fas {
@@ -18,3 +17,7 @@
   color: $pink-card;
   margin: 10px;
 } 
+
+.text {
+  margin: 10px;
+}
