--- a/app/assets/stylesheets/pages/_index_babies.scss
+++ b/app/assets/stylesheets/pages/_index_babies.scss
@@ -1,4 +1,4 @@
-#baby {
+.baby {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -6,7 +6,7 @@
   height: 90px;
 }
 
-#baby_name {
+.baby_name {
   margin-left: 15px;
   margin-bottom: 0px; 
 }
