--- a/app/views/babies/index.html.erb
+++ b/app/views/babies/index.html.erb
@@ -5,14 +5,14 @@
       <p>Un enfant</p>
     </div>
       <% @babies.each do |baby| %>
-        <div class="card" id="baby">
+        <div class="card baby">
           <div><%= cl_image_tag baby.photo.key, height: 200, width: 350, crop: :fill, class: "avatar-large" %></div>
-          <h2 id="baby_name"><%= baby.name %></h2>
+          <h2 class="baby_name"><%= baby.name %></h2>
         </div>
       <% end %>
-      <div class="card" id="baby">
+      <div class="card baby">
         <i class="fas fa-plus"></i>
-        <h2 id="baby_name">Nouvel enfant</h2>
+        <h2 class="baby_name">Nouvel enfant</h2>
       </div>
   </div>
 </body>
