--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -8,15 +8,23 @@
   width: 170px;
   display: block;
   text-align: center;
+  &:hover{
+    text-decoration: none;
+    color: white;
+  }
 }
 .button-secondary {
-  color: $green;
   font-weight: 900;
-  background-color: rgba(148, 236, 190, 0.3);
+  color: $white;
+  background-color: lightgray;
   padding: 10px;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
   font-size: 18px;
   width: 170px;
   display: block;
   text-align: center;
+  &:hover{
+    text-decoration: none;
+    color: white;
+  }
 }
