--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,12 +2,18 @@
 .bg-img{
   height: 100vh;
   width: 100vw;
-  background: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5)), url("background.jpg");
+  background: linear-gradient(to bottom, rgba(148, 236, 190, 0.6), rgba(201, 176, 203, 0.6)), url("background.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-
 }
 .logo{
   height: 50px;
+  margin-top: 70px;
+}
+.button-full-width{
+  width: 300px;
+}
+.margin-top-home{
+  margin-top: 350px;
 }
