--- a/app/views/babies/index.html.erb
+++ b/app/views/babies/index.html.erb
@@ -11,6 +11,6 @@
     <% end %>
     <div class="card baby">
       <i class="fas fa-plus"></i>
-      <h2 class="baby_name">Nouvel enfant</h2>
+      <h2 class="baby_name" id="color">Nouvel enfant</h2>
     </div>
 </div>
