--- a/app/views/babies/new.html.erb
+++ b/app/views/babies/new.html.erb
@@ -13,7 +13,7 @@
     <%= f.label :Poids_de_naissance %>
     <%= f.text_field :weight %>
     <%= f.input :photo, as: :file %>
-    <div><%= f.submit %></div>
+    <%= f.submit %>
     <% end %>
   </div>
 </body>
