--- a/app/views/babies/index.html.erb
+++ b/app/views/babies/index.html.erb
@@ -10,7 +10,9 @@
       </div>
     <% end %>
     <div class="card baby">
+      <% link_to baby_path do %>
       <i class="fas fa-plus"></i>
       <h2 class="baby_name" id="color">Nouvel enfant</h2>
+      <% end %>
     </div>
 </div>
