added link_to on card + css

--- a/app/assets/stylesheets/pages/_index_babies.scss
+++ b/app/assets/stylesheets/pages/_index_babies.scss
@@ -25,3 +25,10 @@
 #color {
   color: $font-color;
 }
+
+.text-decoration {
+  text-decoration: none;
+  &:hover{
+    text-decoration: none;
+  }
+}
