--- a/app/views/babies/index.html.erb
+++ b/app/views/babies/index.html.erb
@@ -9,10 +9,10 @@
         <h2 class="baby_name"><%= baby.name %></h2>
       </div>
     <% end %>
+    <%= link_to new_baby_path, class: "text-decoration" do %>
     <div class="card baby">
-      <% link_to baby_path do %>
       <i class="fas fa-plus"></i>
       <h2 class="baby_name" id="color">Nouvel enfant</h2>
-      <% end %>
     </div>
+    <% end %>
 </div>
