--- a/app/views/events/choose_type.html.erb
+++ b/app/views/events/choose_type.html.erb
@@ -1,15 +1,32 @@
 <h1>Event type</h1>
 
-<% @types.each do |type| %>
-<%= type %>
-<% end %>
 
-<div>
-  <ul>
-    <% @types.each do |type| %>
-    <div>
-      <li><%= type %></li>
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div>
+        <ul>
+          <% @daily_types.each do |type| %>
+          <div class="card">
+            <h2><%= type %></h2>
+          </div>
+          <% end %>
+        </ul>
+      </div>
     </div>
-    <% end %>
-  </ul>
+    <div class="carousel-item">
+        <div>
+        <ul>
+          <% @health_types.each do |type| %>
+          <div class="card">
+            <h2><%= type %></h2>
+          </div>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
+    </div>
+  </div>
 </div>
