--- a/app/views/events/choose_type.html.erb
+++ b/app/views/events/choose_type.html.erb
@@ -1,32 +1,55 @@
-<h1>Event type</h1>
+<body>
+  <div class="container">
+
+    <div class="text">
+      <h1>Add</h1>
+      <p>an event</p>
+    </div>
 
 
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
+      <% @daily_types.each do |type| %>
+        <div class="card baby">
+          <h2><%= type %></h2>
+        </div>
+        <% end %>
+      </div>
+    <div class="carousel-item">
       <div>
-        <ul>
-          <% @daily_types.each do |type| %>
-          <div class="card">
-            <h2><%= type %></h2>
-          </div>
+        <% @health_types.each do |type| %>
+           <div class="card baby">
+              <h2><%= type %></h2>
+            </div>
           <% end %>
-        </ul>
       </div>
     </div>
     <div class="carousel-item">
-        <div>
-        <ul>
-          <% @health_types.each do |type| %>
-          <div class="card">
+      <div>
+        <% @other_event_types.each do |type| %>
+          <div class="card baby">
             <h2><%= type %></h2>
           </div>
           <% end %>
-        </ul>
       </div>
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
     </div>
   </div>
+  <a class="carousel-control-prev" role="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </a>
+  <a class="carousel-control-next" role="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </a>
 </div>
+
+  </div>
+</body>
