--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
-  <h2>Sign up</h2>
-
+  <div class="d-flex justify-content-center">
+  <h1 class="mt-5">Sign up</h1>
+</div>
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
@@ -10,10 +11,11 @@
     <%= f.input :password_confirmation, required: true, input_html: { autocomplete: "new-password" } %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+  <div class="form-actions d-flex flex-column align-items-center">
+    <%= f.button :submit, "Sign up", class: "mt-3 mb-3" %>
+    <%= render "devise/shared/links" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+
 </div>
