--- a/app/views/babies/new.html.erb
+++ b/app/views/babies/new.html.erb
@@ -1,17 +1,12 @@
 <body>
   <div class="container">
     <h1>Nouvel enfant</h1>
-    <%= simple_form_for(@baby, html: { novalidate: false }) do |f| %>
-    <%= f.label :Nom %>
-    <%= f.text_field :name%>
-    <%= f.label :Sexe %>
-    <%= f.text_field :gender %>
-    <%= f.label :Date_de_naissance %>
-    <%= f.text_field :birth_date %>
-    <%= f.label :Taille_de_naissance %>
-    <%= f.text_field :height %>
-    <%= f.label :Poids_de_naissance %>
-    <%= f.text_field :weight %>
+    <%= simple_form_for @baby do |f| %>
+    <%= f.input :name, label: "Nom" %>
+    <%= f.input :gender, label: "Sexe" %>
+    <%= f.input :birth_date, label: "Date de naissance" %>
+    <%= f.input :height, label: "Taille de naissance" %>
+    <%= f.input :weight, label: "Poids de naissance"  %>
     <%= f.input :photo, as: :file %>
     <%= f.submit %>
     <% end %>
