--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -14,6 +14,16 @@ input[type=text] {
   width: 100%;
 }
 
+input[type=number] {
+  background-color: $form-bg;
+  border: none;
+  padding: 10px;
+  color: #A79696;
+  font-size: 18px;
+  border-radius: 3px;
+  width: 100%;
+}
+
 input[type=submit] {
   color: white;
   font-weight: 900;
