--- a/app/views/babies/index.html.erb
+++ b/app/views/babies/index.html.erb
@@ -6,13 +6,13 @@
     <% @babies.each do |baby| %>
       <div class="card baby">
         <div><%= cl_image_tag baby.photo.key, height: 200, width: 350, crop: :fill, class: "avatar-large" %></div>
-        <h2 class="baby_name"><%= baby.name %></h2>
+        <h2 class="baby_name_index"><%= baby.name %></h2>
       </div>
     <% end %>
     <%= link_to new_baby_path, class: "text-decoration" do %>
     <div class="card baby">
       <i class="fas fa-plus"></i>
-      <h2 class="baby_name" id="color">Nouvel enfant</h2>
+      <h2 class="baby_name_index" id="color">Nouvel enfant</h2>
     </div>
     <% end %>
 </div>
