added text in form

--- a/app/views/babies/new.html.erb
+++ b/app/views/babies/new.html.erb
@@ -5,8 +5,8 @@
     <%= f.input :name, label: "Nom" %>
     <%= f.input :gender, label: "Sexe" %>
     <%= f.input :birth_date, label: "Date de naissance" %>
-    <%= f.input :height, label: "Taille de naissance" %>
-    <%= f.input :weight, label: "Poids de naissance"  %>
+    <%= f.input :height, label: "Taille de naissance en cm" %>
+    <%= f.input :weight, label: "Poids de naissance en kg"  %>
     <%= f.input :photo, as: :file %>
     <%= f.submit %>
     <% end %>
