--- a/app/views/babies/show.html.erb
+++ b/app/views/babies/show.html.erb
@@ -1,1 +1,25 @@
-<h1>Hello World</h1>
+<div class="container">
+  <div>
+    <h1>Maurice</h1>
+    <p>2 mois et 14 jours</p>
+  </div>
+  <div class="row">
+    <div class="card column-12">
+      <div class="last-eat"></div>
+      <div class="last-sleep"></div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="column-6">
+      <div class="card last-event"></div>
+    </div>
+    <div class="column-6">
+      <div class="card heal-card"></div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="column-12">
+      <div class="all-events card"></div>
+    </div>
+  </div>
+</div>
