--- a/app/views/babies/new.html.erb
+++ b/app/views/babies/new.html.erb
@@ -3,8 +3,8 @@
     <h1>Nouvel enfant</h1>
     <%= simple_form_for @baby do |f| %>
     <%= f.input :name, label: "Nom" %>
-    <%= f.input :gender, label: "Sexe" %>
-    <%= f.input :birth_date,  label: "Date de naissance" %>
+    <%= f.input :gender, as: :select, collection: Baby::GENDER, label: "Sexe" %>
+    <%= f.input :birth_date, label: "Date de naissance" %>
     <%= f.input :height, label: "Taille de naissance en cm" %>
     <%= f.input :weight, label: "Poids de naissance en kg" %>
     <%= f.input :photo, as: :file %>
