--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,7 +1,7 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
-@import "container";
+@import "container-page";
 @import "navbar";
 @import "button";
 @import "button-circle";
