--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -44,18 +44,18 @@ input:focus,
 textarea:focus {
   outline: none;
 }
-<<<<<<< HEAD
 
 .form-control {
   background-color: $form-bg;
-=======
-.gray_link{
+}
+
+.gray_link {
   color: lightgray;
 }
-a{
+
+a {
   color: lightgray;
   &:hover{
     color: lightgray;
   }
->>>>>>> ee1c7608e5e9a6a65e1a989d41274d510c56358d
 }
