linked choose event to event new

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,18 +1,12 @@
-<h1>hello world from new event view</h1>
 
 <body>
   <div class="container">
-    <h1>Nouvel Event</h1>
+    <h1>Nouvel "Event"</h1>
     <%= simple_form_for [@baby, @event] do |f| %>
-    <%= f.label :Quantité %>
-    <%= f.input :value_float %>
-    <%= f.label :Date %>
-    <%= f.input :start_time, as: :date, html5: true %>
-    <%= f.label :Heure %>    
-    <%= f.input :start_time, as: :time, html5: true %>
-    <%= f.label :Commentaire %>
-    <%= f.input :comment %>
-
+    <%= f.input :value_float, :label => 'Quantité (ml)' %>
+    <%= f.input :start_time, as: :date, :label => 'Date', html5: true %>
+    <%= f.input :start_time, as: :time, :label => 'Heure', html5: true %>
+    <%= f.input :comment, :label => 'Commentaire' %>
     <%= f.submit %>
     <% end %>
   </div>
