--- a/app/views/events/choose_type.html.erb
+++ b/app/views/events/choose_type.html.erb
@@ -17,7 +17,7 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <% @daily_types.each do |type| %>
-      <%= link_to new_baby_path, class: "text-decoration" do %>
+      <%= link_to new_baby_event_path, class: "text-decoration" do %>
         <div class="card baby">
           <h2><%= type %></h2>
         <% end %>
@@ -43,14 +43,14 @@
       </div>
     </div>
   </div>
-  <a class="carousel-control-prev" role="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
-  </a>
-  <a class="carousel-control-next" role="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
-  </a>
+  </button>
 </div>
 
   </div>
