--- a/app/views/babies/show.html.erb
+++ b/app/views/babies/show.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div>
-    <h1>Maurice</h1>
+    <h1><%= @baby.name %></h1>
     <p>2 mois et 14 jours</p>
   </div>
   <div class="row">
-    <div class="card col-12 style="background: url('<%= cl_image_tag @baby.photo.key, crop: :fill %>)";>
+    <div class="card col-12 baby-profile-card" style="background: url('<%= cloudinary_url @baby.photo.key %>')">
       <div class="d-flex justify-content-between">
         <div class="last-eat d-flex ">
           <i class="fas fa-utensils"></i>
