--- a/app/assets/stylesheets/pages/_show_babies.scss
+++ b/app/assets/stylesheets/pages/_show_babies.scss
@@ -4,6 +4,12 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
-.last-sleep{
+.last-sleep, .last-eat, .fa-utensils, .fa-moon{
   color: white;
+  p{
+    color: white;
+  }
+  a{
+    color: white;
+  }
 }
