--- a/app/views/babies/show.html.erb
+++ b/app/views/babies/show.html.erb
@@ -5,13 +5,13 @@
   </div>
   <div class="row">
     <div class="col">
-    <div class="card baby-profile-card" style="background: url('<%= cloudinary_url @baby.photo.key %>') ">
+    <div class="card baby-profile-card mb-3" style="background: url('<%= cloudinary_url @baby.photo.key %>') ">
       <div class="d-flex justify-content-between">
-        <div class="last-eat d-flex ">
+        <div class="last-eat d-flex align-items-center">
           <i class="fas fa-utensils"></i>
           <p>12:10</p>
         </div>
-        <div class="last-sleep d-flex flex-row-reverse">
+        <div class="last-sleep d-flex flex-row-reverse align-items-flex-end">
           <i class="fas fa-moon"></i>
           <p>12:25</p>
         </div>
@@ -21,12 +21,12 @@
   </div>
   <div class="row">
     <div class="col-8">
-      <div class="card last-event">
+      <div class="card last-event bg-foot mb-3 d-flex flex-column align-items-end">
         <p>Dernier evenement</p>
       </div>
     </div>
     <div class="col">
-      <div class="card heal-card">
+      <div class="card heal-card mb-3">
         <i class="fas fa-heart"></i>
         <p>Santé</p>
       </div>
