language change to french for event types

--- a/app/views/events/choose_type.html.erb
+++ b/app/views/events/choose_type.html.erb
@@ -1,8 +1,8 @@
   <div class="container">
 
     <div class="text">
-      <h1>Add</h1>
-      <p>an event</p>
+      <h1>Ajouter</h1>
+      <p>un événement</p>
     </div>
 
 
