--- a/app/views/events/timeline.html.erb
+++ b/app/views/events/timeline.html.erb
@@ -1,7 +1,7 @@
 <div class="container-page">
   <div class="container">
     <div class="text-up">
-      <h1><<%= @baby.name %></h1>
+      <h1><%= @baby.name %></h1>
       <p>Un evénement</p>
     </div>
   </div>
