--- a/app/views/babies/show.html.erb
+++ b/app/views/babies/show.html.erb
@@ -11,7 +11,7 @@
           <i class="fas fa-utensils"></i>
           <p>12:10</p>
         </div>
-        <div class="last-sleep d-flex flex-row-reverse align-items-flex-end">
+        <div class="last-sleep d-flex flex-row-reverse align-items-center">
           <i class="fas fa-moon"></i>
           <p>12:25</p>
         </div>
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div class="col">
-      <div class="card heal-card mb-3">
+      <div class="card heal-card mb-3 d-flex align-items-center justify-content-center">
         <i class="fas fa-heart"></i>
         <p>Santé</p>
       </div>
