--- a/app/assets/stylesheets/pages/_baby_timeline.scss
+++ b/app/assets/stylesheets/pages/_baby_timeline.scss
@@ -1,3 +1,9 @@
+.cards-timeline {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
 .event {
   width: 200px;
   height: 200px;
