--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,7 +2,7 @@
 .bg-img{
   height: 100vh;
   width: 100vw;
-  background: linear-gradient(to bottom, rgba(148, 236, 190, 0.6), rgba(201, 176, 203, 0.6)), url("background.jpg");
+  background: linear-gradient(to bottom, rgba(148, 236, 190, 0.6), rgba(201, 176, 203, 0.6)), url("https://res.cloudinary.com/dw4harw6z/image/upload/v1617278573/background_o0djpm.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
