--- a/app/views/babies/show.html.erb
+++ b/app/views/babies/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div>
     <h1><%= @baby.name %></h1>
-    <p><%= age %></p>
+    <p><%= @age %></p>
   </div>
   <div class="row">
     <div class="col">
